pictor (2.0) UNRELEASED; urgency=low

  * Initial packaging
  * settings.php: prep for installation to /etc/pictor
  * debian/install: fix install typo
  * index.php:
    - print useful error message if no pictures are found
    - generate/cache thumbnails
    - add support to enable/disable search function
    - replace album search with native php code, rather than shell find
    - deprecate old location method
    - use php's exif extractor
    - get auto-rotate working for thumbnails and generated images
    - add 1920x1080 size
    - don't force size on image display
    - move get_cache_filename() to a function
  * debian/rules, debian/dirs, debian/links: add support for a thumbnail
    cache dir
  * debian/control:
    - bump standards ver
    - misc depends
    - depend on php's imagick module
  * debian/rules: install changelog
  * debian/copyright: drop icons artifact from musica

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 26 Jan 2010 23:40:48 -0600