@@ -14,6 +14,8 @@ pictor (2.0) UNRELEASED; urgency=low
     - add 1920x1080 size
     - don't force size on image display
     - move get_cache_filename() to a function
+    - remove search capability for now, until we have a better way of
+      handling it
   * debian/rules, debian/dirs, debian/links: add support for a thumbnail
     cache dir
   * debian/control:
